--- a/reflections/week01/01.md
+++ b/reflections/week01/01.md
@@ -8,9 +8,16 @@
 
 1. In your own words, why do we use Git?
 
+We use Git to track and store code, so different developers can make changes in it.
+
 2. What are the benefits of having multiple branches?
 
+It allows multiple developers to work on the same project.
+
 3. What is the difference between Git and GitHub?
+
+- Git is a tool and GitHub is a service.
+- Git is for working on your local repository and GitHub is for remote.
 
 ## Afternoon Assignment Link
 
