--- a/reflections/week01/02.md
+++ b/reflections/week01/02.md
@@ -8,12 +8,23 @@
 
 1. What is a ***pseudo-class*** and what are some of the most common ones you think you will use?
 
+It is an element that we can add to selectors.
+The most common are: 
+- :hover
+- :link
+- :enabled
+- :disabled
+
 2. What is ***specificity*** and how might you use it to your benefit?
+
+It is a position of selectors in css. We use it to see what value has different selectors. 
 
 3. What problems do you think you could run into if you over-utilized the `!important` feature?
 
+II think it would be difficult to override it 
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://anastasiiashaynyuk.github.io/cool_site/)**
 
 Identify at least 1 takeaway from today's assignment
