--- a/reflections/week01/02.md
+++ b/reflections/week01/02.md
@@ -28,3 +28,5 @@ II think it would be difficult to override it
 **[Repo](https://anastasiiashaynyuk.github.io/cool_site/)**
 
 Identify at least 1 takeaway from today's assignment
+
+FlexBox is cool.
