--- a/reflections/week01/05.md
+++ b/reflections/week01/05.md
@@ -3,6 +3,14 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+I learn how to clone web pages.
 - What did you learn that was a shock or surprise?
+
+I was amazed how you can create a web-site just using Bootstrap.
 - What are you struggling with?
+
+Media query 
 - What would you count as a victory?
+
+Checkpoint:)
