--- a/reflections/week01/04.md
+++ b/reflections/week01/04.md
@@ -14,6 +14,6 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](ve at https://anastasiiashaynyuk.github.io/khight-studios/)**
 
 Identify at least 1 takeaway from today's assignment
