Journal week1 done

--- a/reflections/week01/03.md
+++ b/reflections/week01/03.md
@@ -8,14 +8,20 @@
 
 1. What is your favorite tip for improving your design? How does it benefit your site?
 
-
+I like to use shadow for boxes and images. it makes a web site looks more natural.
 
 2. Compile a couple of resources that you think might be helpful when trying to review examples of good design ideas.
 
+Siteinspire.com and Behance.het are good sources for inspiration.
+
 3. How do you think good design influences people when visiting a website, and what sorts of things could you convey through design alone?
+
+I think good design can greatly enhance the user experience and help convey important information about the website and its purpose.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://anastasiiashaynyuk.github.io/clone-site/)**
 
 Identify at least 1 takeaway from today's assignment
+
+display-1 is to make icons much bigger
