--- a/reflections/week01/04.md
+++ b/reflections/week01/04.md
@@ -8,12 +8,23 @@
 
 1. What is the purpose of ***wireframing***? 
 
+Wireframes keep the concept user-focused, clarify and define website features and they are are quick and cheap to create.
+
 2. What are the different levels of detail in wireframes, and why is each one useful?
 
+- low-fidelity wireframes are useful for exploring different design ideas and concepts quickly and inexpensively;
+- mid-fidelity wireframes are useful for refining the layout and functionality of the website and for communicating ideas to stakeholders (Sketch or Balsamiq);
+- high-fidelity wireframes are useful for finalizing the design and communicating it to the development team (Figma).
+
+
 3. Do you think wireframes are worth the time, energy, and effort that they require? Why or Why not?
+
+Yes, wireframes do require time, energy, and effort, although they are a valuable tool in the design process that can ultimately save time, money, and frustration by ensuring that the final product meets the needs of its users.
 
 ## Afternoon Assignment Link
 
 **[Repo](ve at https://anastasiiashaynyuk.github.io/khight-studios/)**
 
 Identify at least 1 takeaway from today's assignment
+
+Two heads are better than one
