week2 day1 done

--- a/reflections/week01/04.md
+++ b/reflections/week01/04.md
@@ -23,7 +23,7 @@ Yes, wireframes do require time, energy, and effort, although they are a valuabl
 
 ## Afternoon Assignment Link
 
-**[Repo](ve at https://anastasiiashaynyuk.github.io/khight-studios/)**
+**[Repo](https://anastasiiashaynyuk.github.io/khight-studios/)**
 
 Identify at least 1 takeaway from today's assignment
 
