--- a/reflections/week02/01.md
+++ b/reflections/week02/01.md
@@ -8,12 +8,22 @@
 
 1. What is ***scope***?
 
+Scope is where variables are available for use.
+
 2. What is ***Hoisting***?
+
+It is a process where all declarations moving to the top of the current scope before code execution.
 
 3. In what cases might you use `let` vs. `const` vs. `var`?
 
+You can use 'var' when you want to declare a variable that can be reassigned. 
+'let' when you want to declare a variable that can be reassigned but limited to a certain scope.
+'const' when you want to declare a variable that cannot be reassigned.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://anastasiiashaynyuk.github.io/scoreboard/)**
 
 Identify at least 1 takeaway from today's assignment
+
+JS is fun!
