--- a/reflections/week02/02.md
+++ b/reflections/week02/02.md
@@ -8,9 +8,19 @@
 
 1. What are the three ways to syntactically write a function? What are the differences in how the function acts (if any)?
 
+- Function Declaration - the function definition is hoisted, thus allowing the function to be used before it is defined;
+- Function Expressions - are not hoisted, and therefore cannot be used before they are defined;
+- Arrow Function Expression - do not create their own this value.
+
+
 2. What is the main difference between ***parameters*** and ***arguments***?
 
+Parameters are used when defining a function, they are the names created in the function definition.
+Arguments, on the other hand, are the values the function receives from each parameter when the function is executed.
+
 3. What are ***higher-order functions***? Can you provide an example?
+
+When a function accepts another function as a parameter, or returns a function, it is a higher-order function (Array.prototype.map).
 
 ## Afternoon Assignment Link
 
