--- a/reflections/week02/02.md
+++ b/reflections/week02/02.md
@@ -24,6 +24,6 @@ When a function accepts another function as a parameter, or returns a function, 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://anastasiiashaynyuk.github.io/warehouse-manager/)**
 
 Identify at least 1 takeaway from today's assignment
