--- a/reflections/week02/03.md
+++ b/reflections/week02/03.md
@@ -14,6 +14,6 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://anastasiiashaynyuk.github.io/ice-cream-store/)**
 
 Identify at least 1 takeaway from today's assignment
