--- a/reflections/week02/02.md
+++ b/reflections/week02/02.md
@@ -27,3 +27,5 @@ When a function accepts another function as a parameter, or returns a function, 
 **[Repo](https://anastasiiashaynyuk.github.io/warehouse-manager/)**
 
 Identify at least 1 takeaway from today's assignment
+
+The filter() method search through all the elements while find() method search through all the child elements only.
