--- a/reflections/week02/03.md
+++ b/reflections/week02/03.md
@@ -8,12 +8,21 @@
 
 1. What are the main ways to write information to the console? Why/when should you use each style?
 
+- consol.log() - you can use it to display information like debugging messages or program output; 
+- console.error() - you can use it when there is an error in your program that you need to debug.
+
 2. Which tab allows you to see the breakdown of HTML/CSS, and how can this tab be useful when debugging HTML?
 
+The Elements tab - it allows you to inspect and manipulate the code in real-time, making it easier to identify and fix issues more quickly.
+
 3. Instead of writing everything to the console, what is a better way to debug your code?
+
+You can use the debugger statement. It allows you to step through your code, view the call stack, and examine the values of variables at each step.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://anastasiiashaynyuk.github.io/ice-cream-store/)**
 
 Identify at least 1 takeaway from today's assignment
+
+forEach() is better than just for() loop for multiple data.
