--- a/reflections/week02/04.md
+++ b/reflections/week02/04.md
@@ -8,12 +8,20 @@
 
 1. What are the benefits of making a plan for your application before starting to write the code?
 
+if you plan ahead it helps you to clarify your ideas, saves time, provides a "roadmap", improves code quality.
+
 2. How do you find answers when you are stuck?
 
+Google it or ask one of the CodeWorks TA:)
+
 3. What coding mistakes would you be most likely to make? What advice from this article do you find most helpful?
+
+For me it would be not taking breaks, not questioning existing code. The whole article was really helpful, especially parts about not targeting the end-user experience and having the wrong attitude about errors.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://anastasiiashaynyuk.github.io/boss-monster/)**
 
 Identify at least 1 takeaway from today's assignment
+
+Team work is great!
