--- a/reflections/week02/05.md
+++ b/reflections/week02/05.md
@@ -4,6 +4,16 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+I have learned a lot about JS.
+
 - What did you learn that was a shock or surprise?
+
+How to make a progress bar moving. 
 - What are you struggling with?
+
+Game logic.
+
 - What would you count as a victory?
+
+Every assignment and checkpoint.
