--- a/reflections/week03/01.md
+++ b/reflections/week03/01.md
@@ -8,12 +8,27 @@
 
 1. What problem does using ***exports*** solve?
 
+We use export to make a module accessible to other parts of our code.
+
 2. How does `export` differ from `export default`?
+
+Export allows you to export one or more named values from a module, which can be imported by other modules using their exact name.
+Export default allows you to export a single value from a module, which can be imported by other modules using any name they want.
 
 3. What is a benefit of using the "module" system?
 
+- Code can be split into smaller files of self-contained functionality.
+- Multiple scripts can be concatenated thereby increasing performance.
+- Debugging becomes easier.
+- Any code referencing a module understands it is a dependency. If the module file is changed or moved, the problem is immediately obvious.
+- Modules (usually) helps eradicate naming conflicts. Function sumAll() in module1 cannot clash with Function sumAll() in module2. Aliases are very useful here, it becomes module1.sumAll() and module2.sumAll().
+- ES6 Modules are always executed in strict mode, so there is no need for 'use strict' .
+- ES6 modules help you to organize your code better.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://anastasiiashaynyuk.github.io/game-night/)**
 
 Identify at least 1 takeaway from today's assignment
+
+get - is a special method that takes in no parameters and must have a return
