--- a/reflections/week03/02.md
+++ b/reflections/week03/02.md
@@ -8,12 +8,21 @@
 
 1. What is the purpose of ***Encapsulation***?
 
+Encapsulation is the bundling of data and the methods that act on that data such that access to that data is restricted from outside the bundle.
+
 2. What were some of the problems with ***closures*** and the ***underscore prefix*** convention?
+
+- Breaking Changes;
+- Leaked Implementation Details;
+- Expanded Attack Surface for Hackers;
+- Self Documenting Code
 
 3. How do we create private variables in an ES6 `Class`? Why would you do this?
 
+Private class members can be created by using a hash # prefix. Using private variables in a class can help to improve the reliability, security, and maintainability of your code.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](ttps://anastasiiashaynyuk.github.io/vendr/)**
 
 Identify at least 1 takeaway from today's assignment
