--- a/reflections/week03/03.md
+++ b/reflections/week03/03.md
@@ -8,12 +8,20 @@
 
 1. What are the two common operations that we will set in the ***handler***?
 
+Get and set.
+
 2. What do you have to make sure you are doing with every `get` to ensure the value does not become `undefined`?
 
+Return it.
+
 3. What are some of the benefits of the `Proxy` object that we are using in our structure for applications?
+
+The Proxy object allows developers to define custom behavior by intercepting or acting as a Proxy in between for fundamental operations. For instance, you can invoke functions, look up the property of an object, read and write into a property of an object easily with the Proxy object. 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://anastasiiashaynyuk.github.io/Gregslist/)**
 
 Identify at least 1 takeaway from today's assignment
+
+
