--- a/reflections/week03/02.md
+++ b/reflections/week03/02.md
@@ -23,6 +23,8 @@ Private class members can be created by using a hash # prefix. Using private var
 
 ## Afternoon Assignment Link
 
-**[Repo](ttps://anastasiiashaynyuk.github.io/vendr/)**
+**[Repo](https://anastasiiashaynyuk.github.io/vendr/)**
 
 Identify at least 1 takeaway from today's assignment
+
+
