--- a/reflections/week03/03.md
+++ b/reflections/week03/03.md
@@ -24,4 +24,6 @@ The Proxy object allows developers to define custom behavior by intercepting or 
 
 Identify at least 1 takeaway from today's assignment
 
+.on - listener (listen to the key '' on appState, and run draw function when it changes)
+
 
