--- a/reflections/week03/04.md
+++ b/reflections/week03/04.md
@@ -8,12 +8,22 @@
 
 1. What problems does the ***observer pattern*** seek to solve?
 
+It helps to solve the problem of how to efficiently notify many parts of a program when something changes, without making them constantly check for changes.
+
 2. What are the three mechanisms of the observer pattern?
+
+- Subject
+- Observer
+- Event
 
 3. Review the code generated from the bcw-template, and reflect on the `Proxy` objects from yesterday and your understanding of the observer pattern today. With this knowledge, explain how the magic of the bcw-template uses these two concepts to manage and update the DOM.
 
+Together, these two concepts allow the bcw-template to efficiently manage and update the DOM, by only updating the parts of the view that have actually changed. This leads to a much more performant and responsive user experience, and makes it easier to manage complex applications with a lot of dynamic data.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/Alexmquan/fruit_salad)**
 
 Identify at least 1 takeaway from today's assignment
+
+Need more time for afternoon assignment:)
