--- a/reflections/week03/05.md
+++ b/reflections/week03/05.md
@@ -4,6 +4,14 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+Last weeks checkpoint
 - What did you learn that was a shock or surprise?
+
+MVC
 - What are you struggling with?
+
+MVC logic
 - What would you count as a victory?
+
+Definitely checkpoint #3
