--- a/reflections/week04/01.md
+++ b/reflections/week04/01.md
@@ -8,12 +8,22 @@
 
 1. What are some of the signs and causes of 'callback hell'?
 
+The pyramid shape and all the '})' at the end
+
 2. What does ***asynchronous*** mean, and how are callbacks involved?
+
+The word ‘asynchronous’, aka ‘async’ just means ‘takes some time’ or ‘happens in the future, not right now’. Usually callbacks are only used when doing I/O, e.g. downloading things, reading files, talking to databases, etc.
 
 3. Summarize the 3 ways to avoid/fix 'callback hell.'
 
+- Keep your code shallow
+- Modularize(aka libraries)
+- Handle every single error
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://anastasiiashaynyuk.github.io/trivia/)**
 
 Identify at least 1 takeaway from today's assignment
+
+axios - library
