--- a/reflections/week04/03.md
+++ b/reflections/week04/03.md
@@ -8,9 +8,15 @@
 
 1. What is the purpose of `async`/`await`?
 
+They make the code look like it’s synchronous, but it’s asynchronous and non-blocking behind the scenes.
+
 2. What must you do in order to `await` a promise inside of a function?
 
+The function must be declared as async.
+
 3. What are some of the primary benefits of `async`/`await`?
+
+The code is much simpler to read with async and await.
 
 ## Afternoon Assignment Link
 
