--- a/reflections/week04/02.md
+++ b/reflections/week04/02.md
@@ -8,12 +8,21 @@
 
 1. What are the three states of a `Promise`?
 
+- Pending: Initial State, before the Promise succeeds or fails
+- Resolved: Completed Promise
+- Rejected: Failed Promise
+
 2. How do `Promise`s seek to resolve the issues of 'callback hell'?
+
+Promises are a way to manage asynchronous code in JavaScript and seek to resolve the issues of "callback hell" by providing a cleaner and more structured way of handling asynchronous operations.
 
 3. What is the difference between `.then()` and `.catch()`?
 
+.then() is for resolved Promises, .catch() - for rejected.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/AnastasiiaShaynyuk/asyncGregslist)**
 
 Identify at least 1 takeaway from today's assignment
+Dynamic forms 
