--- a/reflections/week04/02.md
+++ b/reflections/week04/02.md
@@ -22,7 +22,8 @@ Promises are a way to manage asynchronous code in JavaScript and seek to resolve
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/asyncGregslist)**
+**[Repo](https://anastasiiashaynyuk.github.io/asyncGregslist/)**
 
 Identify at least 1 takeaway from today's assignment
+
 Dynamic forms 
