--- a/reflections/week04/03.md
+++ b/reflections/week04/03.md
@@ -20,6 +20,6 @@ The code is much simpler to read with async and await.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://anastasiiashaynyuk.github.io/Pokedex/)**
 
 Identify at least 1 takeaway from today's assignment
