--- a/reflections/week04/04.md
+++ b/reflections/week04/04.md
@@ -8,12 +8,20 @@
 
 1. What does ***REST*** stand for, and in simple terms what does it mean?
 
+REST is typically implemented using the built-in fetch() function or other HTTP client libraries like Axios, Superagent, or Request. These libraries provide a simple and standardized way to make HTTP requests and handle responses.
+
 2. What does ***stateless*** mean?
+
+Stateless typically refers to functions or components that do not have any internal state that persists between function calls or component renders. This means that their output is solely determined by their inputs, and they do not rely on any external or internal data to produce their result.
 
 3. What URL pattern is used when writing a ***RESTful API***?
 
+When writing a RESTful API, URLs are used to define the resources and operations that are available through the API.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/AnastasiiaShaynyuk/Gifted)**
 
 Identify at least 1 takeaway from today's assignment
+
+.splice is a method that is used to modify an array by adding or removing elements from it.
