--- a/reflections/week04/05.md
+++ b/reflections/week04/05.md
@@ -4,6 +4,14 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+More practice with MVC pattern.
 - What did you learn that was a shock or surprise?
+
+How useful API is.
 - What are you struggling with?
+
+JavaScript logic
 - What would you count as a victory?
+
+Adding clock to the final project.
