questions week 5 day 1 done

--- a/reflections/week04/01.md
+++ b/reflections/week04/01.md
@@ -22,7 +22,7 @@ The word ‘asynchronous’, aka ‘async’ just means ‘takes some time’ or
 
 ## Afternoon Assignment Link
 
-**[Repo](https://anastasiiashaynyuk.github.io/trivia/)**
+**[Repo](https://anastasiiashaynyuk.github.io/trivia)**
 
 Identify at least 1 takeaway from today's assignment
 
