--- a/reflections/week05/01.md
+++ b/reflections/week05/01.md
@@ -8,9 +8,15 @@
 
 1. What is the purpose of a ***query string***?
 
+A query string allows you to pass information to and from a website by simply adding, or “appending,” that information to the end of a URL. This information is stored in the query string and is captured by the website when it reads the URL.
+
 2. What is the format of a ***query parameter***? How does it start? How do you distinguish between one parameter and the next?
 
+The query string portion of a URL is the part of the URL after the question mark ?. Each key=value pair is called a query parameter. If your query string has multiple query parameters, they’re separated by &.
+
 3. When do you think query parameters would be helpful when writing your server?
+
+They can be helpful when you want to dynamically filter, sort or paginate data, or when you want to provide different views of the same resource.
 
 ## Afternoon Assignment Link
 
