--- a/reflections/week05/02.md
+++ b/reflections/week05/02.md
@@ -8,9 +8,17 @@
 
 1. What are the three types of data relationships?
 
+- One-To-One (1:1)
+- One-To-Many (1:N)
+- Many-To-Many (N:M)
+
 2. What are the benefits of traditional ***linking*** relationships over ***embedding*** relationships?
 
+
+
 3. When modeling data, it's important to consider how a user will use and filter that data. How does this affect the way you model a ***many-to-many*** relationship? 
+
+
 
 ## Afternoon Assignment Link
 
