day 1 week 5 done

--- a/reflections/week05/01.md
+++ b/reflections/week05/01.md
@@ -20,6 +20,8 @@ They can be helpful when you want to dynamically filter, sort or paginate data, 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/AnastasiiaShaynyuk/Burgershack)**
 
 Identify at least 1 takeaway from today's assignment
+
+a colon : in our mount path denotes a variable that can be targeted in the request parameters (req.params)
