week 5 day  done

--- a/reflections/week05/02.md
+++ b/reflections/week05/02.md
@@ -14,15 +14,19 @@
 
 2. What are the benefits of traditional ***linking*** relationships over ***embedding*** relationships?
 
-
+- With linking relationships, you can easily connect different pieces of information or data without changing the underlying structure of the content.
+- Linking relationships allow you to organize content in a logical and hierarchical manner.
+- Linking relationships can also improve accessibility for users who rely on assistive technologies such as screen readers, as they can follow the links to access related content.
 
 3. When modeling data, it's important to consider how a user will use and filter that data. How does this affect the way you model a ***many-to-many*** relationship? 
 
-
+When modeling a many-to-many relationship, we should not only consider the relationship between the entities, but also the attributes or properties of that relationship that a user may want to query or filter on. By including these additional columns in the junction table, we can create a more flexible and user-friendly data model.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/AnastasiiaShaynyuk/GregslistNode)**
 
 Identify at least 1 takeaway from today's assignment
+
+When you edit your original something in the database, you should set the originals to properties equal the changes than came in from the req.body.
 
