--- a/reflections/week05/03.md
+++ b/reflections/week05/03.md
@@ -7,9 +7,15 @@
 
 1. In simple terms what is ***timeboxing***?
 
+Timeboxing is a time management technic where each task, no matter how large or small, is given a specific time box that serves as a deadline.
+
 2. What three strategies will you implement and how?
 
+Practice and adapt - I will use Pomodoro app more often to timebox my tasks. Also prioritize strategy - I will think for my priority tasks first and will try to implement them in life. 
+
 3. Give an example of when you would have benefitted from timeboxing and how? 
+
+When you work on team project. You can share your calendar with coworkers, they shouldn’t be able to schedule you for anything else during that time. It will increase your productivity.
 
 ## Afternoon Assignment Link
 
