--- a/reflections/week05/04.md
+++ b/reflections/week05/04.md
@@ -8,9 +8,15 @@
 
 1. What is a ***virtual property***?
 
+Virtuals are additional fields for a given model. Their values can be set manually or automatically with defined functionality. A common virtual property is the full name of a person, composed of user’s first and last name.
+
 2. When might you use a virtual property? 
 
+Virtual properties can be useful when you need to derive a value based on other properties of a document, but you don't want to store that value in the database. They allow you to encapsulate this logic within your Mongoose schema and make it easy to work with in your application.
+
 3. How do you search by a virtual property's value?
+
+You can define a virtual property in your Mongoose schema. Virtual properties are properties that are not stored in the database but are calculated based on other properties. Then define a Mongoose query that searches for documents based on the virtual property's value. 
 
 ## Afternoon Assignment Link
 
