day 3 week 5 done

--- a/reflections/week05/03.md
+++ b/reflections/week05/03.md
@@ -19,6 +19,8 @@ When you work on team project. You can share your calendar with coworkers, they 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/AnastasiiaShaynyuk/DaPlanets)**
 
 Identify at least 1 takeaway from today's assignment
+
+You need an Id from parent to create relationships between data bases.
