--- a/reflections/week05/05.md
+++ b/reflections/week05/05.md
@@ -7,8 +7,12 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 Following the server algorithm 
 - What did you learn that was a shock or surprise?
 
+Not surprise but still confusing about relationships.
 
 - What are you struggling with?
 
+Relationships
 
 - What would you count as a victory?
+
+Nothing this week
