week 6 day 1 done

--- a/reflections/week06/01.md
+++ b/reflections/week06/01.md
@@ -8,12 +8,23 @@
 
 1. What is ***Component-Based Architecture***?
 
+It is a method for encapsulating individual pieces of larger user interface into self-sustaining, independent micro-systems.
+
 2. What are some benefits of Component-Based Architecture?
+
+- Reusability;
+- Modal Design;
+- Scalability;
+- Collaborative Development
 
 3. What are some drawbacks to Component-Based Architecture?
 
+In CBA when using many components, there is the possibility that readability might actually become degraded. Also one of CBA’s most glaring issues is a propensity towards over-engineering.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/AnastasiiaShaynyuk/Vue-playground)**
 
 Identify at least 1 takeaway from today's assignment
+
+In todays assignment we just follow the path of the Vue Playground.
