--- a/reflections/week06/02.md
+++ b/reflections/week06/02.md
@@ -14,6 +14,6 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/AnastasiiaShaynyuk/vueGifted)**
 
 Identify at least 1 takeaway from today's assignment
