Week 6 Day 2 done

--- a/reflections/week06/02.md
+++ b/reflections/week06/02.md
@@ -8,12 +8,22 @@
 
 1. What are ***props***?
 
+Props are how we pass variables and other information around between different components.
+
 2. What are props used for?
 
+ Props are used to pass data from a parent component to a child component.
+
 3. Where can props be used or accessed?
+
+Props can be used and accessed in <template></template> and <script></script> sections of a child component.
+
+
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/vueGifted)**
 
 Identify at least 1 takeaway from today's assignment
+
+A lot of new information:)
