--- a/reflections/week06/03.md
+++ b/reflections/week06/03.md
@@ -8,9 +8,15 @@
 
 1. What are ***lifecycle hooks***? What are lifecycle hooks used for?
 
+Lifecycle hooks are a window into how the library that we’re using works behind-the-scenes. Lifecycle hooks allow you to know when your component is created, added to the DOM, updated, or destroyed.
+
 2. How have you used lifecycle hooks in your afternoon projects?
 
+onMounted() - you can use ut to access the component's DOM elements and perform other task that require the component to be visible in the browser.
+
 3. What are ***mounting hooks***? When might you use them?
+
+Mounting hooks allows you to access your component immediately before and after the first render.They do not run during server-side rendering. You can use them if you need to access or modify the DOM of your component or initialization.
 
 ## Afternoon Assignment Link
 
