--- a/reflections/week06/04.md
+++ b/reflections/week06/04.md
@@ -8,12 +8,20 @@
 
 1. What is a **nested route***?
 
+ Nested routes allow for more complex user interfaces with components nested inside each other. 
+
 2. When might you use a nested route? (other than the provided example)
+
+You can use nested routes in creating a multiple-level navigation menu: you can have a top-level menu that links to several sub-menus, each of links to additional pages or components.
 
 3. Can you pass parameters through nested routes? When might you use them?
 
+We could have routes defined with dynamic segments such as path: '/location/:id'. Then, on the views for those routes we can reference that id as this.$route.params. This is useful when you have more data of a particular type (users, pictures, etc.) that you are wishing to display on your site/app.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/blogger_vue)**
 
 Identify at least 1 takeaway from today's assignment
+
+In todays assignment we worked in teams. We created Blogger application using Vue.js framework. We made a multiple SPA that utilizes Vue and Vue-Router. Also worked with Auth0 to manage client Authentication.
