--- a/reflections/week06/05.md
+++ b/reflections/week06/05.md
@@ -3,6 +3,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+Understanding how Vue.js works.
+
 - What did you learn that was a shock or surprise?
+
+How easy you can change using from Vanilla JS to Vue.
+
 - What are you struggling with?
+
+Pagination
+
 - What would you count as a victory?
+
+Kind of checkpoint. This one is the hardest for now.
