--- a/reflections/week07/02.md
+++ b/reflections/week07/02.md
@@ -8,12 +8,25 @@
 
 1. What is ***code documentation***? What are some of the ways to document code?
 
+ Good documentation helps you to remember how the code works, what it does, and how to use it.
+
+Ways to document your code:
+ - howtos guides for using your code,
+ - a nice README for the repo,
+ - code documentation in the source.
+
 2. What are some benefits of code documentation?
 
+Documentation helps to make the code easier to understand and update. Also when multiple programmers are working on the same codebase, documentation can help them work together more effectively. 
+
 3. How important is code documentation and why?
+
+ Code documentation is a critical aspect of software development that can help to improve the quality, maintainability, and collaboration of code projects.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+Lecture day again. Started checkpoint #6.
