--- a/reflections/week07/03.md
+++ b/reflections/week07/03.md
@@ -8,12 +8,20 @@
 
 1. What is the ***user experience***? What should be considered when developing to create a good UX?
 
+UX, or user experience, is every interaction your business has with people on your website, mobile site, apps, and online properties or services. When creating good UX design means focusing on the user.
+
 2. What are some benefits of taking into account the user experience?
 
+The goal of good UX is to help users do what they want to do when interacting with your business. Taking into account the user experience can have significant benefits for both users and businesses, leading to increased satisfaction, usability, accessibility, and revenue.
+
 3. Why is the user experience important?
+
+UX is important because it directly impacts user satisfaction, usability, accessibility, efficiency, competitiveness, and business impact. By focusing on UX design, businesses can improve their products and services and drive growth and success.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+Worked on checkpoint project.
