--- a/reflections/week07/01.md
+++ b/reflections/week07/01.md
@@ -8,12 +8,24 @@
 
 1. What is ***pair programming***? What are the roles and how do they work?
 
+Pair programming consists of two programmers sharing a single workstation (one screen, keyboard and mouse among the pair). The programmer at the keyboard is usually called the “driver”, the other, also actively involved in the programming task but focusing more on overall direction is the “navigator”; it is expected that the programmers swap roles every few minutes or so.
+
+
 2. What are some benefits of pair programming?
 
+- increased code quality;
+- improved productivity;
+- improved teamwork and collaboration.
+
 3. What are some drawbacks to pair programming?
+
+- having two people working on the same task can be more expensive than having just one;
+- sometimes it can take longer than working alone, especially if there are disagreements or if one person is significantly more experienced than the other.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+It was all day lecture day.
