--- a/reflections/week07/04.md
+++ b/reflections/week07/04.md
@@ -6,12 +6,20 @@
 
 1. Which principles from this week's readings did you implement?
 
+I was working more on UI after I was done with backend and functionality on frontend. I focused on users satisfaction when they are going to visit my website.
+
 2. What went well this week?
 
+More practice with vue definitely helps.
+
 3. What would you do differently?
+
+I would timebox myself better.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+I was working on my checkpoint. 
