--- a/reflections/week07/05.md
+++ b/reflections/week07/05.md
@@ -3,6 +3,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+I satisfied with my checkpoint.
+
 - What did you learn that was a shock or surprise?
+
+Nothing surprising this week.
+
 - What are you struggling with?
+
+When I spend too much time onn my application I usually  start to struggle with simple things and I look for help. But my goal is solve it on my own.
+
 - What would you count as a victory?
+
+My checkpoint.
