--- a/reflections/week08/01.md
+++ b/reflections/week08/01.md
@@ -8,12 +8,25 @@
 
 1. What function does a ***developer portfolio*** provide?
 
+- Increased visibility and authority.
+- A way to prove you know your craft.
+- A background of work allowing you to get that first position in the industry.
+- It can show your expertise on a subject.
+- Increasing your personal brand.
+- Stand out from a crowd of candidates in interviews.
+
 2. What makes a developer portfolio effective?
 
+To make a great first impression and achieve better results, your portfolio should contain four main elements: a homepage, a skills page, a projects page, and a resume.
+
 3. What projects do you have that you would include in your portfolio? Why?
+
+I really like my Inspire because it looks beautiful and I will include Tower in my portfolio because it my first fullstack application with great features.  
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+We will be working on our capstone for next two weeks.
