--- a/reflections/week08/03.md
+++ b/reflections/week08/03.md
@@ -8,12 +8,25 @@
 
 1. What is ***software development testing***?
 
+Software development testing is the process of evaluating software products to ensure that they meet the desired quality standards and fulfill the requirements of the end-users. It involves testing the software for defects, errors, and bugs to ensure that it functions as expected and meets the specified requirements.
+
 2. What are the benefits of testing in software development?
 
+- Detecting and fixing bugs;
+- Improving software quality;
+- Reducing development costs;
+- Enhancing customer satisfaction.
+
 3. What are some potential drawbacks of testing in software development?
+
+- testing can be time-consuming, especially if the software is complex or has many features;
+- testing can be costly, as it requires resources such as test environments, testing tools, and skilled testers;
+- if testing is not thorough, it can miss important issues or bugs in the software. 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+As team we presented our capstone project and got green light to work on it. 
