--- a/reflections/week08/05.md
+++ b/reflections/week08/05.md
@@ -3,6 +3,16 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+Working in a great team helps my productivity a lot.
+
 - What did you learn that was a shock or surprise?
+
+You have a lot of responsibilities when you work as a team member. Sometimes it can be stressful.
+
 - What are you struggling with?
+
+Pagination 
+
 - What would you count as a victory?
+We are almost done with our basic application and are now ready to make improvements in the coming week.
