--- a/reflections/week08/02.md
+++ b/reflections/week08/02.md
@@ -8,12 +8,22 @@
 
 1. Why is communication on a small team important?
 
+Communication on a small team is crucial because it is essential for ensuring that everyone is on the same page and working towards the same goals. Effective communication helps to build trust, encourage collaboration, and enhance team morale. When team members can communicate openly and honestly, they are more likely to feel comfortable sharing their thoughts, ideas, and concerns, which can lead to better decision-making and problem-solving.
+
 2. What adjustments from traditionally sized scrum teams need to be made to use the Agile methodology effectively in a small team?
 
+- Daily stand-up meetings can be shorter and more informal.
+- The team needs to prioritize the backlog carefully and work on the most important items first.
+- In a small team, it is essential that team members have cross-functional skills to ensure that work can be completed even if a team member is absent or unavailable. 
+
 3. What is the ***unattainable triangle***? What are the tradeoffs of each side?
+
+The Unattainable Triangle, also known as the Project Management Triangle or the Iron Triangle, is a concept that represents the three constraints that are present in every project: time, cost, and scope. The concept suggests that these constraints are interdependent, and any changes made to one constraint will inevitably impact the other two.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+Was working on Figma for our capstone.
