--- a/reflections/week08/04.md
+++ b/reflections/week08/04.md
@@ -8,12 +8,22 @@
 
 1. What are the three main types of testing we can accomplish in Vue? What does each method provide?
 
+- Unit testing involves testing individual components or functions of a Vue application in isolation. It helps in ensuring that each component or function behaves as expected and meets the specified requirements.
+- Integration testing involves testing the interaction between different components or functions of a Vue application. It helps in ensuring that the components and functions work together as expected and that the application meets the desired requirements.
+- End-to-end testing involves testing the Vue application as a whole, from the user's perspective. It helps in ensuring that the application functions as expected and meets the needs of the end-users.
+
 2. What testing method do you think is the most useful? Why?
 
+Unit testing is the most useful testing method because it helps in identifying and fixing bugs early in the development process. By testing individual components or functions of the application in isolation, developers can catch issues before they become bigger problems, which can save time and reduce development costs.
+
 3. What testing method do you think is the least useful? Why?
+
+ End-to-end testing is less effective in certain scenarios. This is because it can be time-consuming, expensive, and difficult to set up.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+Worked on front page of our application.
