--- a/reflections/week09/01.md
+++ b/reflections/week09/01.md
@@ -6,9 +6,15 @@
 
 1. What technologies and principles are you using in your project?
 
+We are using SPAs, RESTful APIs and mongoDB.
+
 2. What went well so far?
 
+We have found strategy for our team and so far it is working good.
+
 3. What would you do differently? Why?
+
+Nothing at this time:)
 
 ## Afternoon Assignment Link
 
