--- a/reflections/week09/03.md
+++ b/reflections/week09/03.md
@@ -10,12 +10,20 @@
 
 1. What is a ***Base64 encoded image***?
 
+Base64 encoded images are a convenient way to represent images in a text-based format that can be easily transmitted over the internet.
+
 2. What are the drawbacks of using Base64 encoding?
 
+It is not ideal for larger files or applications that require high-quality or secure data transmission.
+
 3. Why are these drawbacks issues in this day and age versus in the past?
+
+Base64 encoding is still useful in certain situations, its drawbacks have become more significant in this day and age due to advances in technology and changing user expectations.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+Today I used emailJS for inviting people/friends to theirs trips in our application. 
