--- a/reflections/week09/04.md
+++ b/reflections/week09/04.md
@@ -8,9 +8,17 @@
 
 1. What is an ***SSL certificate***?
 
+SSL certificates are a small data files that cryptographically establish an encrypted link between a web server and a browser. This link ensures that all data passed between the web server and browser remain private.
+
 2. What are the different types of certificates? What are they used for?
 
+- Extended Validation (EV) SSL Certificate - used to verify the ownership of a domain name.
+- Organization Validated (OV SSL) Certificate - used to verify the identity of an organization and are ideal for businesses that handle sensitive data.
+- Domain Validation (DV) Certificate - used to verify the legal and physical existence of an organization. 
+
 3. What are some benefits of using SSL certificates?
+
+Using SSL certificates can help to protect sensitive data, build user trust, improve search engine rankings, and ensure compliance with regulations.
 
 ## Afternoon Assignment Link
 
