--- a/reflections/week09/05.md
+++ b/reflections/week09/05.md
@@ -4,6 +4,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+We worked really hard on our project, and it has become amazing. I am glad I had a great team to work with
+
 - What did you learn that was a shock or surprise?
+
+Working with emailJs was a little complicated and I had some trouble to figure it out. 
+
 - What are you struggling with?
+
+Blurhash
+
 - What would you count as a victory?
+
+I am proud of our application.
