--- a/reflections/week09/02.md
+++ b/reflections/week09/02.md
@@ -8,12 +8,25 @@
 
 1. What is a ***Github action*** and how do they work?
 
+GitHub Actions is a feature of the GitHub platform that allows developers to automate software workflows. A workflow is a set of automated steps that run when a specific event occurs, such as a push to a GitHub repository or the creation of a new pull request.
+
 2. What benefits do Github actions provide?
 
+- It allows developers to automate their workflows, which can save time and reduce errors;
+- it provides visibility into the status of workflows, allowing developers to see at a glance whether a workflow succeeded or failed;
+- can be used to notify team members about new changes or issues, enabling better collaboration among team members.
+
 3. What types of ***trigger actions*** can a workflow use? What do they do?
+
+-Push is triggered when a user pushes code changes to a repository;
+- pull request trigger action is triggered when a user creates or updates a pull request on a repository;
+- schedule trigger action is triggered at specified intervals, such as daily, weekly, or monthly;
+- webhook trigger action is triggered when a specific event occurs on an external service, such as a new issue being created on a project management tool. 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+We are done with our base goals of our application and ready for ideals.
