Week 10 day 1 done

--- a/reflections/week10/01.md
+++ b/reflections/week10/01.md
@@ -8,13 +8,23 @@
 
 1. What are the three categories of data types? How are they different?
 
+- Value type - holds a data value within its own memory space;
+- Reference type - doesn’t store its value directly. It stores the address where the value is being stored;
+- Pointer type - does not inherit from object and no conversions exist between pointer types and object.
+
 2. What are the ***value-type*** data types? What differences do you notice from JavaScript?
 
+Value-type data includes numeric, bool, character, enumerated and struct types. In JavaScript, if you assign an object to a variable, the variable holds a reference to the object's location in memory, not the object's value itself. 
+
 3. In your own words how do ***reference types*** get stored in memory? How does this differ from value types?
+
+Value types store their actual value directly in memory, while reference types store a reference to their location in memory.
 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/AnastasiiaShaynyuk/cSharpDayOne)**
 
 Identify at least 1 takeaway from today's assignment
+
+In today's afternoon assignment, we followed along with an example where we created a fake database to introduce C#.  
