--- a/reflections/week10/02.md
+++ b/reflections/week10/02.md
@@ -8,12 +8,23 @@
 
 1. What is a `List` in C#?
 
+A `List` is a generic collection that is used to store a group of related objects of the same type. It provides dynamic resizing, allowing you to add or remove items as necessary. 
+
 2. What `List` methods seem like you might use them often? Why?
+
+List.Add - adds an item to the end of the list.
+List.Clear - removes all items from the list. Count is zero, Capacity is unchanged.
+List.Contains - returns true if the list contains the specified item.
+List.Remove - removes the first occurrence of the specified item from the list.
 
 3. How would you retrieve an item from a `List`? What method could you use?
 
+We can use the List method Find to retrieve an item based on a specific condition. Also we can use the ElementAt method to retrieve an item at a specific index in the list.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/AnastasiiaShaynyuk/gregslist_cSharp)**
 
 Identify at least 1 takeaway from today's assignment
+
+In todays afternoon assignment we were going our last GregsList using C#. I felt really sad knowing it is the last:(
