--- a/reflections/week10/03.md
+++ b/reflections/week10/03.md
@@ -8,7 +8,16 @@
 
 1. In a SQL table, what is the difference between information in a row and information in a column?
 
+Each row represents a single record or instance of the entity being represented by the table. Each column of the table represents a specific attribute or property of that entity.
+
 2. Demonstrate the basic structure for creating a new table called "characters" with the values "name, age, description" as strings, and an `int` id.
+
+CREATE TABLE characters (
+  id INT NOT NULL AUTO_INCREMENT PRIMARY KEY,
+  name VARCHAR(50) NOT NULL,
+  age INT NOT NULL,
+  description VARCHAR(255) NOT NULL,
+) default charset utf8mb4 COMMENT '';
 
 3. What are the difference between the following statements: 
 ```sql
@@ -16,8 +25,13 @@ DELETE FROM table_name;
 DROP TABLE table_name;
 ```
 
+DELETE FROM table_name - This statement removes all the rows of data from the specified table. It does not delete the table itself, only the data stored within it.
+DROP TABLE table_name - This statement removes the entire table from the database, including all the data stored within it. It permanently deletes the table structure and all associated objects like indexes, triggers, constraints etc. It cannot be undone, so it's important to use it with caution.
+
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+Today we got our zero strike checkpoint. I started to work on it.
