--- a/reflections/week10/04.md
+++ b/reflections/week10/04.md
@@ -8,12 +8,20 @@
 
 1. What is an ***Enum***, and what are some use cases for them?
 
+Enums are strongly typed constants. They are essentially unique types that allow you to assign symbolic names to integral values. Enums are a way of representing a set of related constants in a readable, maintainable, and self-documenting way, which reduces the potential for errors that can occur when using integer literals or string constants to represent specific values.
+
 2. How can you modify an Enum?
 
+You cannot modify an enum directly, but you can add or remove values to an existing enum by updating the enum declaration and recompiling the code. It is important to note that any changes made to an enum will have an impact on any code that depends on that enum.
+
 3. How have you used Enums in your afternoon lab projects this far? (if you have not yet, give an example of how you could.)
+
+No, I have not and do not really understand how can I use then.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/AnastasiiaShaynyuk/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+I was working on creating all tables for my checkpoint using SQL and started to get, create and delete recipes and ingredients for my application.
