--- a/reflections/week10/05.md
+++ b/reflections/week10/05.md
@@ -3,6 +3,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+I was initially apprehensive about learning C#, but it turned out to be a great experience. While I did face some challenges, I found that C# is a language that is very self-explanatory and easy to understand.
+
 - What did you learn that was a shock or surprise?
+
+How quick you can learn new programming language.
+
 - What are you struggling with?
+
+Joining two tables can be challenging.
+
 - What would you count as a victory?
+
+My progress in the checkpoint.
